--- a/oh-package.json5
+++ b/oh-package.json5
@@ -3,7 +3,7 @@
   "description": "Please describe the basic information.",
   "dependencies": {
     "@ohos/axios": "^2.2.2",
-    "@ohos/largeimage": "^2.0.0"
+    "@hview/dayjs": "^1.11.11"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.19",
